# lab-validation

./: .gitignore  .pre-commit-config.yaml  .spr.yml  CLAUDE.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_all_labs.py
.github/workflows/: README.md  ci.yml  daily-ci.yml  docker-release-integration-example.yml  pr-comment-lab-validation.yml  reusable-lab-validation.yml
infra/: README.md  build-image.sh  ec2-launch.sh  ec2-setup.sh  ec2-status.sh  ec2-teardown.sh  upload-image.sh
infra/examples/: two-router-ebgp.clab.yml
infra/examples/ceos-bgp-unnumbered/: checks.yaml
infra/examples/ceos-bgp-weight-experiment/: checks.yaml
infra/examples/ceos-ebgp/: topology.clab.yml
infra/examples/ceos-ospf-unnumbered/: checks.yaml
infra/examples/evpn-type5/: checks.yaml  topology.clab.yml
infra/examples/junos-commit-check/: README.md  checks.yaml
infra/examples/junos-community-delete/: topology.clab.yml
infra/examples/junos-cross-term-match/: README.md  topology.clab.yml
infra/examples/junos-policy-chain-visibility/: README.md  checks.yaml
infra/examples/junos-rmw-localpref/: README.md  checks.yaml  topology.clab.yml
infra/examples/srsim-ceos-ebgp/: README.md  checks.yaml
infra/examples/veos-ebgp/: topology.clab.yml
infra/images/: cEOS64-lab-4.36.0.1F.tar.xz.json  cEOS64-lab-4.36.0.1F.tar.xz.md5sum  cEOS64-lab-4.36.0.1F.tar.xz.sha512sum  vEOS-lab-4.20.15M.vmdk.sha512sum  vEOS-lab-combined-4.20.15M.vmdk.sha512sum
lab_tests/: __init__.py  bf_getters.py  conftest.py  lab_getters.py  sickbay.py  test_labs.py  validation_plugin.py
snapshots/a10_static_route/: README.MD
snapshots/a10_static_route/hosts/: c1.json  rs1.json
snapshots/aws_demo/: README.md
snapshots/aws_instance_multiple_interface/: README.md
snapshots/aws_multi_account_vpc_peering/: README.md
snapshots/aws_multi_account_vpc_peering_tgw/: README.md
snapshots/aws_nlb_multi_az/: README.MD
snapshots/aws_nlb_targets_instance/: README.md
snapshots/aws_nlb_targets_instance_nacl_test/: README.MD
snapshots/aws_nlb_targets_ip/: README.md
snapshots/aws_shared_vpc/: README.MD
snapshots/aws_tgw_asymmetric_non_default_rtb/: README.md
snapshots/aws_tgw_multi_az_intra_region/: README.md
snapshots/aws_tgw_multi_az_intra_region_nacl_test/: README.md
snapshots/aws_tgw_peering/: README.md
snapshots/aws_traffic_in_igw_out_ngw/: README.md
snapshots/aws_vnd_panos_single_fw/: README.md
snapshots/aws_vpc_endpoints/: README.md
snapshots/checkpoint_basic_fw_policy/: README.MD
snapshots/checkpoint_bond_vlan/: README.MD
snapshots/checkpoint_simple_routing/: README.MD
snapshots/cisco_xr_ios_vpnv4/: README.md
snapshots/cumulusfrr_bgp_community/: README.MD
snapshots/cumulusfrr_ospf_area_range/: README.md
snapshots/cumulusfrr_ospf_unnumbered/: README.md
snapshots/cv_demo_base_panos/: README.MD
snapshots/eos_bgp_aggregate/: README.md
snapshots/eos_bgp_weight_behavior_multi_agent/: README.MD
snapshots/eos_bgp_weight_behavior_ribd/: README.MD
snapshots/eos_ceos_bgp_unnumbered/: README.md
snapshots/eos_ceos_bgp_weight_experiment/: README.md
snapshots/eos_ebgp_loop_prevention/: README.MD
snapshots/eos_ibgp_local_preference/: README.MD
snapshots/eos_multicast_base/: README.md
snapshots/eos_ospf_bgp/: README.md
snapshots/eos_ospf_unnumbered/: README.md
snapshots/eos_rm_undefined_continue/: README.MD
snapshots/eos_undefined_route_map/: README.MD
snapshots/fortios_first_basic/: README.MD
snapshots/fortios_fw_policy_basic/: README.MD
snapshots/ios_add_path/: README.md
snapshots/ios_basic_vrrp/: README.md
snapshots/ios_bgp_path_select_8/: README.MD
snapshots/ios_example_network/: README.MD
snapshots/ios_ibgp_split_horizon/: README.MD
snapshots/ios_nxos_bgp_local_as/: README.MD
snapshots/iosxe_connectivity_sample/: README.MD
snapshots/iosxe_ebgp_loop_prevention/: README.MD
snapshots/iosxe_eigrp_multi_process/: README.MD
snapshots/iosxe_eigrp_neighbor/: README.MD
snapshots/iosxe_redistribution/: README.MD
snapshots/iosxe_undefined_route_map/: README.MD
snapshots/iosxe_vrf_route_leaking_bgp_peering/: README.MD
snapshots/iosxe_vrf_route_leaking_classic_eigrp/: README.MD
snapshots/iosxe_vrf_route_leaking_export_map/: README.md
snapshots/iosxe_vrf_route_leaking_wide_eigrp/: README.MD
snapshots/iosxr_ebgp_basic/: README.MD
snapshots/iosxr_ibgp_rr_over_ospf/: README.MD
snapshots/juniper_from_condition/: README.md
snapshots/juniper_resolution/: README.md
snapshots/junos_as_path_acl/: README.MD
snapshots/junos_commit_check/: README.md
snapshots/junos_default_address_selection/: README.md
snapshots/junos_ebgp_loop_prevention/: README.MD
snapshots/junos_rmw_localpref/: README.md
snapshots/junos_then_action_conflicts/: README.md
snapshots/junos_undefined_prefix_list_export/: README.MD
snapshots/junos_undefined_prefix_list_import/: README.MD
snapshots/nxos_bgp_redist_connected/: README.md
snapshots/nxos_ebgp_loop_prevention/: README.MD
snapshots/nxos_eigrp_neighbor/: README.MD
snapshots/nxos_evpn_l2vni/: README.md
snapshots/nxos_evpn_l3vni/: README.md
snapshots/nxos_hsrp/: README.MD
snapshots/nxos_l3_vlan_no_active_member/: README.MD
snapshots/nxos_redistribution/: README.MD
snapshots/nxos_undefined_route_map/: README.MD
snapshots/ospf_summarization/: README.md
snapshots/palo_alto_nat_3/: ping
snapshots/palo_alto_nat_5/: ping
snapshots/palo_alto_nat_6/: ping
snapshots/palo_alto_nat_9/: ping
snapshots/panos_ebgp_loop_prevention/: README.MD
snapshots/panos_ebgp_loop_prevention_gui/: README.MD
snapshots/panos_fw_policy_app_override/: README.MD
snapshots/sonic_bgp_lab/: README.MD
src/lab_builder/: __init__.py  __main__.py  collector.py  config.py  containerlab.py  device.py  health.py  models.py  snapshot.py  validate.py
src/lab_validation/: __init__.py
tests/: conftest.py  test_sickbay.py
tests/lab_builder/: test_collector.py  test_config.py  test_nxos_checks.py  test_snapshot.py  test_sros_checks.py
tools/: README.md  lab_bisect.py
(+6163 files in other folders)
